objects/HIPAAAuthorization__c.object
<CustomObject>
    <fields>
        <fullName>AuthorizationEffectiveDate__c</fullName>
        <label>Authorization Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AuthorizationEffectiveEvent__c</fullName>
        <label>Authorization Effective Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Membership end</fullName>
                </value>
                <value>
                    <fullName>Membership change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizationEffectiveUntil__c</fullName>
        <label>Authorization Effective Until</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizationPeriod__c</fullName>
        <label>Authorization Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All time</fullName>
                </value>
                <value>
                    <fullName>Time bound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizationSubType__c</fullName>
        <label>Authorization SubType</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing and Membership Records</fullName>
                </value>
                <value>
                    <fullName>Change/Update of Record</fullName>
                </value>
                <value>
                    <fullName>Mental Health Records</fullName>
                </value>
                <value>
                    <fullName>Alcohol/drug abuse treatment</fullName>
                </value>
                <value>
                    <fullName>Communicable diseases</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizationType__c</fullName>
        <label>AuthorizationType</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizedMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HIPAA Authorizations (Authorized Member)</relationshipLabel>
        <relationshipName>AuthorizedMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherAuthorization__c</fullName>
        <label>Other Authorization</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryMember__c</fullName>
        <label>Primary Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Hipaa_Authorizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>